# o7_to_risc_v

./: .gitignore  CMakeLists.txt  README.md
src/codegen/: CMakeLists.txt  codegencontext.cpp  codegencontext.h  registerpool.cpp  registerpool.h  stackcontroller.cpp  stackcontroller.h
src/compiler/: CMakeLists.txt  error.cpp  error.h  parser.cpp  parser.h  tlt.h
src/launcher/: CMakeLists.txt  main.cpp
src/smodel/: CMakeLists.txt  commondata.cpp  commondata.h  const.cpp  const.h  context.cpp  context.h  creator.cpp  creator.h  designator.cpp  designator.h  expr.cpp  expr.h  import.cpp  import.h  instruction.cpp  instruction.h  module.cpp  module.h  operand.cpp  operand.h  procedure.cpp  procedure.h  statement.cpp  statement.h  stdprocedures.cpp  stdprocedures.h  type.cpp  type.h  variable.cpp  variable.h
src/tests/: CMakeLists.txt  main.cpp
workspace/o7/: 06.o7  11.o7  12.o7  13.o7  14.o7  16.o7  18.o7  19.o7  20.o7  25.o7  30.o7  31.o7  m000.o7
workspace/o7/big/: 00.o7  01.o7  02.o7  03.o7  04.o7  05.o7  06.o7  08.o7  09.o7  10.o7  15.o7  17.o7  21.o7  22.o7  23.o7  24.o7  26.o7  27.o7  28.o7  29.o7  32.o7  34.o7  35.o7  gcd.o7  ttt.txt
workspace/o7/gentest/: 32.o7  33.o7  36.o7  37.o7  38.o7  39.o7  40.o7  41.o7  42.o7  43.o7  44.o7  45.o7  46.o7  50.o7
workspace/o7/real/: factorial.o7  fibonacci.o7  gcd.o7  sin.o7  sortarray.o7  sumarray.o7
